# kaggle-hms-brain-activity

./: .gitignore  README.md  pyproject.toml
data/: .gitignore
data/processed/: val.csv
dataset_builders/: multiclass_one_hot.py  prob_cross_val.py
experiments/01_resnet1d34/: __init__.py  baseline.py
experiments/02_efficientnet_spectro/: __init__.py  baseline.py
experiments/03_multiclass_efficientnet_spectro/: __init__.py  baseline.py  crossval_0.py  crossval_1.py  crossval_2.py
experiments/04_kldiv_prob_crossval/: __init__.py  baseline.py  finetune.py
experiments/05_seizure_classification/: __init__.py  baseline.py  baseline_high.py  baseline_low.py
experiments/06_pdrda_classification/: __init__.py
experiments/07_kldiv_feature_cat/: __init__.py  baseline.py
experiments/08_efficientnet_spectro_resunet/: __init__.py  baseline.py
experiments/09_seizure_classification_small/: __init__.py  baseline.py  baseline_high.py  baseline_low.py
experiments/10_pdrda_classification_small/: __init__.py  baseline_high.py
experiments/11_kldiv_feature_cat_simple/: __init__.py
experiments/12_1d_resunet_kldiv/: __init__.py
hms_brain_activity/: callbacks.py  datasets.py  metrics.py  module.py  transforms.py  vis.py
hms_brain_activity/core/: callbacks.py  loggers.py  transforms.py
src/core/: loggers.py
src/hms_brain_activity/: callbacks.py  datasets.py  paths.py  transforms.py  vis.py
src/tasks/: create_submission.py  multitrain.py  predict.py  train.py
tasks/: create_submission.py  multitrain.py  predict.py  stop.py  train.py
tests/: test_transforms.py
(+28 files in other folders)
